internal/gatewayapi/testdata/backendtrafficpolicy-with-tcp-route-duplicate-parentrefs.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: policy-for-route
    namespace: default
  spec:
    loadBalancer:
      type: LeastRequest
    targetRef:
      group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcp-app-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: tcp-gateway
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: tcp-gateway
        namespace: default
        sectionName: bar
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: tcp-gateway
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        kinds:
        - group: gateway.networking.k8s.io
          kind: TCPRoute
      name: bar
      port: 8089
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: bar
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
infraIR:
  default/tcp-gateway:
    proxy:
      listeners:
      - name: default/tcp-gateway/bar
        ports:
        - containerPort: 8089
          name: tcp-8089
          protocol: TCP
          servicePort: 8089
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: tcp-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: default
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: default/tcp-gateway
      namespace: envoy-gateway-system
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: TCPRoute
  metadata:
    name: tcp-app-1
    namespace: default
  spec:
    parentRefs:
    - name: tcp-gateway
    - name: tcp-gateway
      sectionName: bar
    rules:
    - backendRefs:
      - name: service-1
        namespace: default
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: tcp-gateway
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: tcp-gateway
        sectionName: bar
xdsIR:
  default/tcp-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-default-tcp-gateway-1ec60381
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: default/tcp-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-default-tcp-gateway-1ec60381
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: default/tcp-gateway
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8089
      metadata:
        kind: Gateway
        name: tcp-gateway
        namespace: default
        sectionName: bar
      name: default/tcp-gateway/bar
      port: 8089
      routes:
      - destination:
          metadata:
            kind: TCPRoute
            name: tcp-app-1
            namespace: default
          name: tcproute/default/tcp-app-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcp-app-1/rule/-1/backend/0
            protocol: TCP
            weight: 1
        loadBalancer:
          leastRequest: {}
        metadata:
          kind: TCPRoute
          name: tcp-app-1
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: policy-for-route
            namespace: default
        name: tcproute/default/tcp-app-1
